fix: area control bottom overflow

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,9 +2,10 @@
   --ing-height-navbar: 80px;
   --ing-height-profile-cover: 125px;
   --ing-height-profile-avatar: 5rem;
+  --ing-height-area-control: 180px;
 
   --ing-width-sidebar: 9rem;
-  --ing-width-areaControl: 56px;
+  --ing-width-area-control: 56px;
 
   --ing-borderRadius-sm:0.5em;
   --ing-borderRadius-md: 1em;
